force-app/main/default/objects/SVMXC__Counter_Rollup__c/SVMXC__Counter_Rollup__c.object-meta.xml
<CustomObject>
    <description>This Object is used to hold Counter usage calcuated for the Service Contract for a specified duration and counter definition.</description>
    <label>Counter Rollup</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Counter Rollups</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>