force-app/main/default/objects/SVMXC__Counter_Rollup__c/fields/SVMXC__Counter_Name__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Counter_Name__c</fullName>
    <description>This field holds the Name of the Counter definition</description>
    <formula>SVMXC__Counter_Definition__r.SVMXC__Counter_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Counter Name</label>
    <type>Text</type>
</CustomField>