force-app/main/default/objects/SVMXC__Counter_Rollup__c/fields/SVMXC__Period_From__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Period_From__c</fullName>
    <description>This field holds the time since when the Counter readings are considered for roll up.</description>
    <label>Period From</label>
    <type>DateTime</type>
</CustomField>