force-app/main/default/objects/SVMXC__Counter_Rollup__c/fields/SVMXC__Period_To__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Period_To__c</fullName>
    <description>This field holds the time until which the Counter readings are considered for roll up.</description>
    <label>Period To</label>
    <type>DateTime</type>
</CustomField>